--- a/Speech2Face_newDataset_augmented_dataset.ipynb
+++ b/Speech2Face_newDataset_augmented_dataset.ipynb
@@ -47,23 +47,7 @@
         "colab": {}
       },
       "source": [
-        "# ! pip3 install face_recognition\n",
-        "#! pip install --upgrade wandb\n",
-        "#! wandb login f9cd4b35bf9733e5ead9d2b06e13ef2259b1284e"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "m5FJW1pc-YZw",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "#import wandb\n",
-        "#wandb.init(project=\"speech2face\")\n"
+        "# ! pip3 install face_recognition"
       ],
       "execution_count": null,
       "outputs": []
@@ -76,24 +60,21 @@
         "colab": {}
       },
       "source": [
-        "# path = \"/content/drive/My Drive/Speech2Face/vox\"\n",
-        "# !curl --user voxceleb1912:0s42xuw6 -o \"/content/drive/My Drive/Speech2Face/ff/vox.zip\" http://www.robots.ox.ac.uk/~vgg/data/voxceleb/vox1a/vox1_test_wav.zip\n",
-        "\n",
-        "\n",
-        "\n",
         "! cp \"/content/drive/My Drive/Speech2Face/vox1_dataset/wav_filtered_40_per_actor.zip\" .\n",
-        "#! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
         "! cp \"/content/drive/My Drive/Speech2Face/vox1_dataset/vox1_meta.csv\" .\n",
         "! cp \"/content/drive/My Drive/Speech2Face/face_features_40_per_actor.zip\" .\n",
         "! cp \"/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/vox.zip\" .\n",
+        "#! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
         "\n",
-        "# ! tar zxvf zippedFaces.tar.gz\n",
+        "\n",
         "! unzip -q face_features_40_per_actor.zip\n",
         "! rm face_features_40_per_actor.zip\n",
         "! unzip -q wav_filtered_40_per_actor.zip\n",
         "! rm wav_filtered_40_per_actor.zip\n",
         "! unzip -q vox.zip\n",
-        "! rm vox.zip\n"
+        "! rm vox.zip\n",
+        "# ! tar zxf zippedFaces.tar.gz\n",
+        "# ! rm zippedFaces.tar.gz"
       ],
       "execution_count": null,
       "outputs": []
@@ -162,7 +143,7 @@
         "colab": {}
       },
       "source": [
-        "##################### DEPENDECIES ###########################\n",
+        "##################### DEPENDECY #1: VGG ###########################\n",
         "class Vgg_face_dag(nn.Module):\n",
         "\n",
         "    def __init__(self):\n",
@@ -279,7 +260,7 @@
         "colab": {}
       },
       "source": [
-        "########################### DEPENDENCY - standard DECODER (w/o warping) ##########################\n",
+        "########################### DEPENDENCY #2: Simple DECODER ##########################\n",
         "class Decoder(nn.Module):\n",
         "    def __init__(self, n_hidden, bottom_width=4, channels=512):\n",
         "        super().__init__()\n",
@@ -340,7 +321,7 @@
         "colab": {}
       },
       "source": [
-        "########################### DEPENDENCY - DECODER w/ warping ##########################\n",
+        "########################### DEPENDENCY #2: DECODER w/ warping ##########################\n",
         "\n",
         "class DECODER(nn.Module):\n",
         "    def __init__(self, phase):\n",
@@ -624,19 +605,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PgMzo1Qov37x",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "#data[10000]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "o5sDbBkIa7Fm",
         "colab_type": "code",
         "colab": {}
@@ -750,9 +718,7 @@
         "#optimizer = optimizer_decay\n",
         "\n",
         "datal = DataLoader(data, 8, True, num_workers=16)\n",
-        "datal_test = DataLoader(data_test, 6, False, num_workers=16)\n",
-        "# W&B\n",
-        "#wandb.watch(model)\n"
+        "datal_test = DataLoader(data_test, 6, False, num_workers=16)"
       ],
       "execution_count": null,
       "outputs": []
@@ -863,7 +829,7 @@
         "            features_fc8 = features_fc8.to(device)\n",
         "            # print(wav.shape)\n",
         "\n",
-        "            # embedding = VGG(img_normal)# .to(device)\n",
+        "            # embedding = VGG(img_normal).to(device)\n",
         "\n",
         "            output = model(wav)\n",
         "\n",
@@ -901,7 +867,6 @@
         "        correct = 0\n",
         "        for (x, y) in test_dl:\n",
         "            with torch.no_grad():\n",
-        "                # send to device\n",
         "                embedding, wav = x\n",
         "                features_fc8, img = y\n",
         "                # send to device\n",
@@ -910,7 +875,7 @@
         "                features_fc8 = features_fc8.to(device)\n",
         "                # print(wav.shape)\n",
         "    \n",
-        "                # embedding = VGG(img_normal)# .to(device)\n",
+        "                # embedding = VGG(img_normal).to(device)\n",
         "    \n",
         "                output = model(wav)\n",
         "    \n",
@@ -931,13 +896,8 @@
         "            f\"Epoch: {epoch}\\n\"\n",
         "            f\"Train set: Average loss: {train_loss_averager(None):.4f}\\n\"\n",
         "            f\"Test set: Average loss: {test_loss_averager(None):.4f}, \"\n",
-        "            #f\"Accuracy: {correct}/{len(test_dl.dataset)} ({accuracy:.0f}%)\\n\"\n",
         "        )\n",
-        "        _save_model(epoch, model, optimizer)\n",
-        "        #torch.save(model.state_dict(), join(wandb.run.dir, 'model.pt'))\n",
-        "        #wandb.log({\"Train set Average loss:\": train_loss_averager(None)})\n",
-        "    # models_accuracy[tag] = accuracy\n",
-        "    # return accuracy"
+        "        _save_model(epoch, model, optimizer)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1008,63 +968,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cDC9H0AyHlx8",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "lambda1 = 0.025\n",
-        "lambda2 = 200.0\n",
-        "model.eval()\n",
-        "test_loss_averager = make_averager()  # mantain a running average of the loss\n",
-        "correct = 0\n",
-        "for (x, y) in datal_test:\n",
-        "    with torch.no_grad():\n",
-        "        # send to device\n",
-        "        embedding, wav = x\n",
-        "        features_fc8, img = y\n",
-        "        # send to device\n",
-        "        wav = wav.to(device)\n",
-        "        embedding = embedding.to(device)\n",
-        "        features_fc8 = features_fc8.to(device)\n",
-        "        output = model(wav)\n",
-        "        fvgg_s = vgg_fc8(output)\n",
-        "        fvgg_f = features_fc8\n",
-        "        fdec_s = decoder(output)\n",
-        "        fdec_f = decoder(embedding)\n",
-        "        loss = F.l1_loss(fdec_f, fdec_s) + lambda1 * loss_2(embedding, output) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
-        "        test_loss_averager(loss)\n",
-        "print(\n",
-        "    f\"Test set: Average loss: {test_loss_averager(None):.4f}, \"\n",
-        "    #f\"Accuracy: {correct}/{len(test_dl.dataset)} ({accuracy:.0f}%)\\n\"\n",
-        ")"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kTVgjwV0dHL6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from torchsummary import summary\n",
-        "\n",
-        "\n",
-        "# model = SpeechEncoder()\n",
-        "input = torch.unsqueeze(torch.tensor(converted).reshape(2,601,257), 0)\n",
-        "\n",
-        "model(input.type(torch.float32)).shape\n",
-        "summary(model, (2,257,601))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "kBS5g-ckzeV9",
         "colab_type": "code",
         "colab": {}
@@ -1091,7 +994,7 @@
         "colab": {}
       },
       "source": [
-        "# Quick testing -- actual test\n",
+        "# Quick testing -- prediction generation\n",
         "\n",
         "test_wav_path = \"wav_filtered_40_per_actor/id10252/id10252_39.wav\"\n",
         "#test_wav_path = \"wav/id10275/mWZ3l5OoyVI/00001.wav\"\n",
@@ -1115,6 +1018,8 @@
         "colab": {}
       },
       "source": [
+        "# Quick testing -- prediction display\n",
+        "\n",
         "o_img_w = cv2.cvtColor(np.einsum('abc->bca',decoded_w[0].cpu().detach().numpy()*255), cv2.COLOR_BGR2RGB)\n",
         "cv2_imshow(o_img_w)"
       ],
@@ -1129,8 +1034,7 @@
         "colab": {}
       },
       "source": [
-        "cv2.imwrite('ds_augmented_epoch0_TRAIN_id10252-39.png', o_img_w)\n",
-        "#!cp ds_augmented_epoch0_TRAIN_id10252-39.png /content/drive/My\\ Drive/Speech2Face"
+        "cv2.imwrite('file.png', o_img_w)"
       ],
       "execution_count": null,
       "outputs": []
