--- a/face_processing.ipynb
+++ b/face_processing.ipynb
@@ -63,7 +63,8 @@
       },
       "source": [
         "#! pip install openface\n",
-        "! pip3 install face_recognition\n"
+        "! pip3 install face_recognition\n",
+        "from face_recognition import face_landmarks, face_locations, face_encodings"
       ],
       "execution_count": null,
       "outputs": []
@@ -133,9 +134,7 @@
         "import cv2\n",
         "import sys\n",
         "\n",
-        "import random\n",
-        "\n",
-        "from face_recognition import face_landmarks, face_locations, face_encodings\n"
+        "import random"
       ],
       "execution_count": null,
       "outputs": []
@@ -420,20 +419,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pyRA6YEKvJyt",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "img = Image.open('/content/unzippedFaces/Abigail_Spencer/1.6/ZwprcvqTH3w/0001700.jpg')\n",
-        "img"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "qYpu79SEvl70",
         "colab_type": "code",
         "colab": {}
@@ -481,7 +466,7 @@
         "colab": {}
       },
       "source": [
-        "no_of_record_per_image = 40  ## NUMBER OF TIMES EVERY CELEBRITIES (DIFFERENT) IMAGES IS TO BE STORED\n",
+        "no_of_record_per_image = 40 \n",
         "face_feature = np.zeros((len(data_points)*no_of_record_per_image,4096)) ### ARRAY THAT WILL STORE THE FACE FEATURE\n",
         "face_feature_fc8 = np.zeros((len(data_points)*no_of_record_per_image,2622)) ### ARRAY THAT WILL STORE THE FACE FEATURE (fc8 layer)\n",
         "\n",
@@ -533,44 +518,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "j5253XMKekwM",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "!rm -r filtered_unzippedFaces/"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zOHJZ24ke0Hy",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "#!cp /content/drive/My\\ Drive/Speech2Face/face_features_10_per_actor.zip .\n",
-        "\n",
-        "!rm -rf Face_Feature"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "5EzCynEGez_0",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
     },
     {
       "cell_type": "code",
@@ -657,25 +604,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uvmWJXs7Tqo1",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "W3dqs5hZUH31",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        " # np.save(\"Face_Feature/facefeature.npy\",face_feature[:index  ])\n",
         " print(face_feature[1].sum())\n",
         " print(face_feature.shape)"
       ],
@@ -690,12 +623,8 @@
         "colab": {}
       },
       "source": [
-        "# prova = np.load(\"Face_Feature/facefeature.npy\")\n",
-        "# print(prova[3752].sum())\n",
-        "\n",
         "! zip -r face_features_40_per_actor.zip filtered_unzippedFaces/ \n",
-        "! cp face_features_40_per_actor.zip /content/drive/My\\ Drive/Speech2Face/\n",
-        "#! rm -r Face_Feature/"
+        "! cp face_features_40_per_actor.zip /content/drive/My\\ Drive/Speech2Face/"
       ],
       "execution_count": null,
       "outputs": []
@@ -713,7 +642,7 @@
         "images_path = '/content/Face_Feature/Faces'\n",
         "out_path = '/content/Faces_rearranged'\n",
         "\n",
-        "def rearrange_pictures():\n",
+        "def rearrange_pictures(): # Rearrange pictures following the dataset's structure\n",
         "  for image in os.listdir(images_path):\n",
         "    full_path = os.path.join(images_path, image)\n",
         "    actor_name = image[:image.rindex('_')]\n",
@@ -726,37 +655,6 @@
         "    shutil.move(full_path, actor_folder)\n",
         "\n",
         "rearrange_pictures()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1q-81xM59_Ap",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "!cp /content/drive/My\\ Drive/Speech2Face/face_features_hopenet.zip . \n",
-        "!unzip face_features_hopenet.zip"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vSG9Uw_wQwy3",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "!cp /content/Face_Feature/facefeature.npy /content/Faces_rearranged\n",
-        "!cp /content/Face_Feature/facefeature_fc8.npy /content/Faces_rearranged\n",
-        "\n",
-        "!zip -r face_features_hopenet_rearranged.zip /content/Faces_rearranged\n",
-        "!cp face_features_hopenet_rearranged.zip /content/drive/My\\ Drive/Speech2Face/"
       ],
       "execution_count": null,
       "outputs": []
